suggestion for change

--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -50,13 +50,36 @@
     "\n",
     "6. **IQ** Stále chceme predikovat výšku, máme však tentokrát k dispozici pouze velikost města, kde osoba žije, a její IQ.\n",
     "\n",
-    "7. **Věk**. Máme nového šéfa. V rámci zefektivnění evidence zaměstnanců chce vytvořit model, který bude pro hodnotu rodné čísla vracet věk. Co bude vstupem a výstupem, jak budeme postupovat?\n",
+    "7. **Věk**. Máme nového šéfa. V rámci zefektivnění evidence zaměstnanců chce vytvořit model, který bude pro hodnotu rodného čísla vracet věk. Co bude vstupem a výstupem, jak budeme postupovat?\n",
     "\n",
-    "8. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splních úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička.\n",
+    "8. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splněných úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička.\n",
     "\n",
     "9. **TODO** Něco na kategorické proměnné, víc než dvě hodnoty ... aby to vedlo na vymýšlení one-hot-encoding.\n",
     "\n",
     "10. **Personalista** Dostali jste hromadu CV uchazečů. Chtěli byste vytvořit model, který na základě údajů ze životopisu navrhne vhodný plat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: spíš to bude MD file, ale líp se mi takhle edituje"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO \n",
+    "\n",
+    "Bych ty příklady na výšku vyházela, je jich nějak moc. Místo toho vzít nějaká data co znají z EDA hodin\n",
+    "a najít tam něco, co by se dalo predikovat.\n",
+    "A nakonec klidně tu časovou řadu, ať si uvědomí, že vždycky to není tak, že co vzor to řádek a vybírají se sloupce. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
