--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -19,10 +19,10 @@
    "metadata": {},
    "source": [
     "1. **Diabetes**. Prohlédněte si následující náhled dat a navrhněte,\n",
-    "jak byste predikovali progress nemoci u nového pacienta.\n",
+    "jak byste predikovali progresi nemoci u nového pacienta.\n",
     "\n",
     " - Můžete si úlohu převést na úlohu s krajinou, co budou souřadnice a co bude výška krajiny?\n",
-    " - Jak budete měřit úspěsnot predikce?\n",
+    " - Jak budete měřit úspěšnost predikce?\n",
     " - Jak posoudíte, zda se vám úlohu podařilo dostatečně zvládnout?\n",
     " \n",
     "  ...\n",
