--- a/lessons/pydata/intro_regression/index.ipynb
+++ b/lessons/pydata/intro_regression/index.ipynb
@@ -315,23 +315,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teď přichází jediná dobrá zpráva z dnešní lekce. Strojové učení nabízí metody (algoritmy), které dokáží méně či více úspěšně provést obdobný odhad (nejen) krajinky za tebe. \n",
+    "Teď přichází jediná dobrá zpráva z dnešní lekce. **Strojové učení** (machine learning) nabízí metody (algoritmy), které dokáží méně či více úspěšně provést obdobný odhad (nejen) krajinky za tebe. \n",
     "\n",
-    "Představ si tuto metodu jako černou krabičku, která má nějaké vstupy a nějaké výstupy. Do vstupů můžeš sypat čísla a krabička na výstupu bude chrlit odpovědi (také čísla). V případě krajinky zadáš souřadnici a krabička ti prozradí, jaká je v daném bodě nadmořská výška. \n",
+    "Představ si tuto metodu jako *černou krabičku*, která má nějaké vstupy a nějaké výstupy. Takové krabičce se říká **model**. Do vstupů můžeš sypat čísla a krabička na výstupu bude chrlit odpovědi (také čísla). V případě krajinky zadáš souřadnici a krabička ti prozradí, jaká je v daném bodě nadmořská výška. Souřadnice, které jdou na vstup *krabičky* (modelu), označujeme jako příznaky (**features**) nebo vstupní proměnné, regressory. Na výstupu je nějaká odezva (závislá proměnná). \n",
     "\n",
     "![černá skříňka](static/blackbox.jpeg)\n",
     "\n",
     "TODO: dokreslit krabičce vstupy a výstupy\n",
     "\n",
     "Samozřejmě krabička nemůže sama od sebe vědět, zda se ptáš na krajinu v Krkonoších nebo v Polabí. Proto je třeba krabičku nejprve naučit (natrénovat, nafitovat) na úkol, který po ní budeme požadovat. \n",
-    "Krabička to zvládne sama, my ji jen musíme poskynout dostatečné množství příkladů souřadnic a odpovídajícíh výšek. Takovému učení, kde jsou k dispozici správné odpovědi, se říká **supervised learning**, česky **učení s učitelem**.  \n",
+    "Krabička to zvládne sama, my ji jen musíme poskynout dostatečné množství příkladů (trénovacích vzorů) souřadnic a odpovídajícíh výšek. Takovému učení, kde jsou k dispozici správné odpovědi, se říká **supervised learning**, česky **učení s učitelem**.  \n",
     "\n",
     "Pojďme si několik krabiček vyzkoušet. Využijeme knihovnu [scikit-learn](https://scikit-learn.org/). Knihovna poskytuje nejen velké množství různých chytrých krabiček, ale také výbornou [dokumentaci](https://scikit-learn.org/stable/user_guide.html), kterou doporučujeme k následnému samostudiu a experimentování. V příští hodině projdeme nejdůležitější funkce, které budeš potřebovat."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
     "\n",
     "\n",
     "\n",
-    " # Zpět ke dvoum dimenzím"
+    " ## Zpět ke dvoum dimenzím"
    ]
   },
   {
@@ -823,6 +823,19 @@
     "Zobecníme si příklad na krajinu, kde se souřadnice zadávají zeměpisnou šířkou a dékou.\n",
     "\n",
     "TODO: Roman? kratší příklad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyper-parametry \n",
+    "\n",
+    "U příkladů výše jsme funkci `vyhodnot krabiku` předávali data a krabičku (model). Několikrát jsme si ale trochu pomohli a předali jsme tiše ještě nějaké další parametry.  Krabička totiž často umožňuje uživateli, aby si ji nakonfiguroval. V terminologii krabiček si můžeme představit, že krabička má na sobě různé páčky, kterými se dá seřídit. Těmito páčkami se nastavují tzv. **hyper-parametry** modelu. Všechny modely, které najdeš v knihovně Scikit-learn, mají nějaké defaultní nastavení a půjdou použít i bez toho, aby ses nastavením těchto **hyper-parametrů** zabývala.  \n",
+    "V případě, že model nedává uspokojivý výsledek, můžeš zkusit tyto parametry upravit, např. vyzkoušet několik různých nastavení a porovnat hodnotu metriky na testovací množině.  \n",
+    "K problému hledání vhodných **hyper-parametrů** se vrátíme na začátku příští hodiny. \n",
+    "\n",
+    "Pokud budeš pokračovat samostudiem, výběr vhodného modelu a nastavení jeho hyperparametrů se skrývá pod klíčovým slovem **model selection**. Knihovna Scikit-learn poskytuje nástroje, jak si toto hledání automatizovat."
    ]
   },
   {
