--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -38,6 +38,7 @@
     "   Prohlédněte si řešení v notebooku a zkuste přijít na to,\n",
     "   co děláme špatně. \n",
     "\n",
+    "2. **Baseline**. V předchozím úkolu jsme použili jako *baseline* řešení průměr. Napadá tě jiná jednoduchá cesta, jak velikost populace odhadovat?\n",
     "\n",
     "3. **Výška**. Máte k dispozici data obsahující věk a výšku člověka. Jak budete postupovat, budete-li chtít predikovat věk na základě výšky.\n",
     "\n",
@@ -52,7 +53,7 @@
     "\n",
     "7. **Věk**. Máme nového šéfa. V rámci zefektivnění evidence zaměstnanců chce vytvořit model, který bude pro hodnotu rodného čísla vracet věk. Co bude vstupem a výstupem, jak budeme postupovat?\n",
     "\n",
-    "8. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splněných úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička.\n",
+    "8. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splněných úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička?\n",
     "\n",
     "9. **TODO** Něco na kategorické proměnné, víc než dvě hodnoty ... aby to vedlo na vymýšlení one-hot-encoding.\n",
     "\n",
