regression metrics - start

--- a/lessons/pydata/intro_regression/index.ipynb
+++ b/lessons/pydata/intro_regression/index.ipynb
@@ -850,7 +850,7 @@
     "V případě, že model nedává uspokojivý výsledek, můžeš zkusit tyto parametry upravit, např. vyzkoušet několik různých nastavení a porovnat hodnotu metriky na testovací množině.  \n",
     "K problému hledání vhodných **hyper-parametrů** se vrátíme na začátku příští hodiny. \n",
     "\n",
-    "Pokud budeš pokračovat samostudiem, výběr vhodného modelu a nastavení jeho hyperparametrů se skrývá pod klíčovým slovem **model selection**. Knihovna Scikit-learn poskytuje nástroje, jak si toto hledání automatizovat."
+    "Pokud budeš pokračovat samostudiem, výběr vhodného modelu a nastavení jeho hyperparametrů se skrývá pod klíčovým slovem **model selection**. Knihovna Scikit-learn poskytuje nástroje, jak si toto hledání automatizovat. *(TODO: Pozn. tohle bych ale asi dala do další hodiny, až se bude řešit ta evaluační množina).*"
    ]
   },
   {
