link to population.csv, singular

--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pár příkladů pro vás \n",
+    "# Příklady pro zamyšlení\n",
     "\n",
     "Následující příklady nejsou na programování. Pouze si popovídáme o tom, jak byste danou situaci pomocí\n",
     "strojového učení řešili. \n",
     "\n",
-    "Míč je na vaší straně. Nebojte se navrhnout cokoli vám bude připadat dobré, koučové vás případně usměrní. \n"
+    "Míč je na tvojí straně. Neboj se navrhnout cokoli, co ti bude připadat dobré, koučové tě případně usměrní. \n"
    ]
   },
   {
@@ -17,23 +17,23 @@
    "metadata": {},
    "source": [
     "1. **Diabetes**. \n",
-    "Prohlédněte si následující náhled dat a navrhněte, jak byste predikovali progresi nemoci u nového pacienta.\n",
+    "Prohlédni si následující náhled dat a navrhni, jak bys predikovala progresi nemoci u nového pacienta.\n",
     "\n",
-    " - Můžete si úlohu převést na úlohu s krajinou, co budou souřadnice a co bude výška krajiny?\n",
-    " - Jak budete měřit úspěšnost predikce?\n",
-    " - Jak posoudíte, zda se vám úlohu podařilo dostatečně zvládnout?\n",
+    " - Můžeš si úlohu převést na úlohu s krajinou. Co budou souřadnice a co bude výška krajiny?\n",
+    " - Jak budeš měřit úspěšnost predikce?\n",
+    " - Jak posoudíš, zda se ti úlohu podařilo dostatečně zvládnout?\n",
     " - Jak zajistit, aby vstupy a výstupy modelu byly reálná čísla? \n",
     " \n",
     " ![dataset_preview](static/diabetes.png)\n",
     " \n",
     "<hr>\n",
     "\n",
-    "2. **Populace**. Stáhněte si notebook [excercise.ipynb](static/excercise.ipynb),\n",
+    "2. **Populace**. Stáhni si notebook [excercise.ipynb](static/excercise.ipynb) a datový soubor [population],\n",
     " je v něm vypracovaná úloha predikce počtu obyvatel v závislosti \n",
     " na velikosti oblasti/města. Naučený model (*krabička*) ale počet\n",
     " obyvatel často podhodnocuje.\n",
-    " Prohlédněte si řešení v notebooku a zkuste přijít na to,\n",
-    "   co děláme špatně. \n",
+    " Prohlédni si řešení v notebooku a zkus přijít na to,\n",
+    "   co je v na něm špatně. \n",
     " \n",
     "<hr>\n",
     "\n",
@@ -41,9 +41,9 @@
     " \n",
     "<hr>\n",
     "\n",
-    "4. **Časová řada**. Připomeňme si data o počasí z hodiny o EDA:\n",
+    "4. **Časová řada**. Připomeň si data o počasí z hodiny o EDA:\n",
     " ![dataset_preview](static/data_ruzyne.png)\n",
-    "Jak bychom postupovali, pokud bychom chtěli predikovat průměrnou teplotu?\n",
+    "Jak bys postupovala, pokud bys chtěla predikovat průměrnou teplotu?\n",
     " \n",
     "<hr>\n",
     "\n",
@@ -51,7 +51,7 @@
     " \n",
     "<hr>\n",
     "\n",
-    "6. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splněných úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička?\n",
+    "6. **PyLadies** Máš k dispozici statistiku účastnic PyLadies. Počet splněných úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebuješ k tomu, abys na základě těchto informací byla schopná predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička?\n",
     " \n",
     "<hr>\n",
     "\n",
