--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -28,8 +28,8 @@
     " \n",
     "<hr>\n",
     "\n",
-    "2. **Populace**. Stáhni si notebook [excercise.ipynb](static/excercise.ipynb) a datový soubor [population],\n",
-    " je v něm vypracovaná úloha predikce počtu obyvatel v závislosti \n",
+    "2. **Populace**. Stáhni si notebook [excercise.ipynb](static/excercise.ipynb) a datový soubor [population.csv](static/population.csv) (ulož do stejného adresáře).\n",
+    " Je v něm vypracovaná úloha predikce počtu obyvatel v závislosti \n",
     " na velikosti oblasti/města. Naučený model (*krabička*) ale počet\n",
     " obyvatel často podhodnocuje.\n",
     " Prohlédni si řešení v notebooku a zkus přijít na to,\n",
