--- a/lessons/pydata/regression_resume/index.ipynb
+++ b/lessons/pydata/regression_resume/index.ipynb
@@ -18,7 +18,7 @@
     "- Testovací množina by měla být dostatečně reprezentativní. Nemáme-li jiné vodítko, vybereme testovací množinu **náhodným výběrem** z dat.   \n",
     "\n",
     "\n",
-    "- K posouzení kvality řešení nám slouží **metriky**, seznámily jsme se základními metrikami pro regresi (TODO viz ntb s přehledem metrik)\n",
+    "- K posouzení kvality řešení nám slouží **metriky**, seznámili jsme se základními metrikami pro regresi\n",
     "\n",
     "\n",
     "- Jsou-li v datech hodnoty, které evidentně nesouvisí s predikovanou odezvou (např. id, čísla řádek, apod.), nebudeme je zahrnovat mezi vstupní proměnné (**příznaky**). \n",
@@ -27,16 +27,13 @@
     "- Nepoužíváme kanón na vrabce. Máme-li přímý algoritmus na řešení problému, nebudeme používat strojové učení. \n",
     "\n",
     "\n",
-    "- Pod pojmem **hyper-parametry** se skrývají parametry modelů, jejichž hodnotu nastavuje uživatel.  "
+    "- Pod pojmem **hyper-parametry** se skrývají parametry modelů, které můžeme sami nastavit. Můžeme "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**todo**: přidala bych do první hodiny ještě ty hyperparametry, jinak nám ta druhá přeteče\n",
-    "    a navíc to budem potřebovat hned na začátku té druhé"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
