d -> df_krajina fix

--- a/lessons/pydata/intro_regression/index.ipynb
+++ b/lessons/pydata/intro_regression/index.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dobrá zpráva je, že výšku krajinky v těchto bodech přeci jen známe (předvídavě jsme tyto body nechali stranou). Hodnoty najdeš ve sloupečku `\"x_test\"` a `\"y_test\"` DataFramu `d`. \n",
+    "Dobrá zpráva je, že výšku krajinky v těchto bodech přeci jen známe (předvídavě jsme tyto body nechali stranou). Hodnoty najdeš ve sloupečku `\"x_test\"` a `\"y_test\"` DataFramu `df_krajina`. \n",
     "\n",
     "Napiš funkci (**metriku**), která vyhodnotí, jak moc byl odhad tvé krajinky úspěšný.\n",
     "\n",
