Lumir's comments adopted

--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -41,7 +41,7 @@
     " \n",
     "<hr>\n",
     "\n",
-    "4. **Časová řada**. Připomeň si data o počasí z hodiny o EDA:\n",
+    "4. **Časová řada**. Máme k dispozici následující data o počasí:\n",
     " ![dataset_preview](static/data_ruzyne.png)\n",
     "Jak bys postupovala, pokud bys chtěla predikovat průměrnou teplotu?\n",
     " \n",
