--- a/lessons/pydata/regression_resume/index.ipynb
+++ b/lessons/pydata/regression_resume/index.ipynb
@@ -27,7 +27,7 @@
     "- Nepoužíváme kanón na vrabce. Máme-li přímý algoritmus na řešení problému, nebudeme používat strojové učení. \n",
     "\n",
     "\n",
-    "- Pod pojmem **hyper-parametry** se skrývají parametry modelů, které můžeme sami nastavit. Můžeme "
+    "- Pod pojmem **hyper-parametry** se skrývají parametry modelů, které můžeme sami nastavit. "
    ]
   },
   {
