--- a/lessons/pydata/regression_exercises/static/excercise.ipynb
+++ b/lessons/pydata/regression_exercises/static/excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,56 +53,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Rome</td>\n",
-       "      <td>430</td>\n",
-       "      <td>3798000</td>\n",
+       "      <th>48</th>\n",
+       "      <td>Toronto, ON</td>\n",
+       "      <td>883</td>\n",
+       "      <td>6345000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Nairobi</td>\n",
-       "      <td>215</td>\n",
-       "      <td>4652000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>Istanbul</td>\n",
+       "      <th>9</th>\n",
+       "      <td>Berlin</td>\n",
        "      <td>520</td>\n",
-       "      <td>13187000</td>\n",
+       "      <td>4006000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>Chengdu, SC</td>\n",
-       "      <td>425</td>\n",
-       "      <td>8891000</td>\n",
+       "      <th>37</th>\n",
+       "      <td>Houston, TX</td>\n",
+       "      <td>1793</td>\n",
+       "      <td>5567000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Khartoum</td>\n",
-       "      <td>360</td>\n",
-       "      <td>5069000</td>\n",
+       "      <th>51</th>\n",
+       "      <td>Essen-Dusseldorf</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>6722000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Guadalajara</td>\n",
-       "      <td>290</td>\n",
-       "      <td>4413000</td>\n",
+       "      <th>95</th>\n",
+       "      <td>Manila</td>\n",
+       "      <td>610</td>\n",
+       "      <td>22710000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>San Francisco-San Jose, CA</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>5996000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Oblast  Rozloha  Počet obyvatel\n",
-       "1          Rome      430         3798000\n",
-       "20      Nairobi      215         4652000\n",
-       "77     Istanbul      520        13187000\n",
-       "63  Chengdu, SC      425         8891000\n",
-       "28     Khartoum      360         5069000\n",
-       "14  Guadalajara      290         4413000"
+       "                        Oblast  Rozloha  Počet obyvatel\n",
+       "48                 Toronto, ON      883         6345000\n",
+       "9                       Berlin      520         4006000\n",
+       "37                 Houston, TX     1793         5567000\n",
+       "51            Essen-Dusseldorf     1025         6722000\n",
+       "95                      Manila      610        22710000\n",
+       "43  San Francisco-San Jose, CA     1080         5996000"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "cerna_krabicka = LinearRegression()\n",
     "cerna_krabicka.fit(X_train, y_train)\n",
     "\n",
-    "df_populace.loc[df.index[:70],\"predikce\"] = cerna_krabicka.predict(X_train)\n",
-    "df_populace.loc[df.index[70:], \"predikce\"] = cerna_krabicka.predict(X_test)"
+    "df_populace.loc[df_populace.index[:70],\"predikce\"] = cerna_krabicka.predict(X_train)\n",
+    "df_populace.loc[df_populace.index[70:], \"predikce\"] = cerna_krabicka.predict(X_test)"
    ]
   },
   {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-356297f6cb50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0m____________\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m________\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m________\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcerna_krabicka\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-356297f6cb50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0m____________\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m________\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m________\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcerna_krabicka\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named '____________'"
      ]
     }
