bonus added (ref to ml comics)

--- a/lessons/pydata/intro_regression/index.ipynb
+++ b/lessons/pydata/intro_regression/index.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Bonus: [komiks o tom, co to to strojové učení je](https://cloud.google.com/products/ai/ml-comic-1/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ilustrační příklad na úvod - *imaginární krajina*\n",
     "\n",
     "Dnešní hodina je trochu jiná, nebudeš se tolik zaměřovat na programování, to není při aplikaci strojového učení zas až tolik potřeba. Důležitejší je vědět, co chceš dělat a proč. Proto je naším cílem donutit tě přemýšlet. \n",
