empty cells deleted

--- a/lessons/pydata/regression_exercises/static/excercise.ipynb
+++ b/lessons/pydata/regression_exercises/static/excercise.ipynb
@@ -53,53 +53,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>Toronto, ON</td>\n",
-       "      <td>883</td>\n",
-       "      <td>6345000</td>\n",
+       "      <th>19</th>\n",
+       "      <td>Harbin,</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4609000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Berlin</td>\n",
-       "      <td>520</td>\n",
-       "      <td>4006000</td>\n",
+       "      <th>58</th>\n",
+       "      <td>Johannesburg-East Rand</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>7960000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Houston, TX</td>\n",
-       "      <td>1793</td>\n",
-       "      <td>5567000</td>\n",
+       "      <th>68</th>\n",
+       "      <td>Tianjin, TJ</td>\n",
+       "      <td>740</td>\n",
+       "      <td>9596000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Essen-Dusseldorf</td>\n",
-       "      <td>1025</td>\n",
-       "      <td>6722000</td>\n",
+       "      <th>79</th>\n",
+       "      <td>Buenos Aires</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>13913000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Manila</td>\n",
-       "      <td>610</td>\n",
-       "      <td>22710000</td>\n",
+       "      <th>32</th>\n",
+       "      <td>Pune, MAH</td>\n",
+       "      <td>185</td>\n",
+       "      <td>5376000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>San Francisco-San Jose, CA</td>\n",
-       "      <td>1080</td>\n",
-       "      <td>5996000</td>\n",
+       "      <th>82</th>\n",
+       "      <td>Bangkok</td>\n",
+       "      <td>950</td>\n",
+       "      <td>14910000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Oblast  Rozloha  Počet obyvatel\n",
-       "48                 Toronto, ON      883         6345000\n",
-       "9                       Berlin      520         4006000\n",
-       "37                 Houston, TX     1793         5567000\n",
-       "51            Essen-Dusseldorf     1025         6722000\n",
-       "95                      Manila      610        22710000\n",
-       "43  San Francisco-San Jose, CA     1080         5996000"
+       "                    Oblast  Rozloha  Počet obyvatel\n",
+       "19                 Harbin,      200         4609000\n",
+       "58  Johannesburg-East Rand     1000         7960000\n",
+       "68             Tianjin, TJ      740         9596000\n",
+       "79            Buenos Aires     1020        13913000\n",
+       "32               Pune, MAH      185         5376000\n",
+       "82                 Bangkok      950        14910000"
       ]
      },
      "execution_count": 2,
@@ -297,13 +297,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,20 +342,6 @@
     "df_populace.plot(x=\"Rozloha\", y=\"predikce2\", color=\"green\", ax=ax[1]);\n",
     "df_populace.plot(x=\"Rozloha\", y=\"predikce\", xlim=[0,2000], color=\"blue\", ax=ax[1]);\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
