opraveny Lumirovy pripominky

--- a/lessons/pydata/classification_metrics/index.ipynb
+++ b/lessons/pydata/classification_metrics/index.ipynb
@@ -248,7 +248,8 @@
    "metadata": {},
    "source": [
     "Nyní se podíváme na binární klasifikaci (klasifikaci do dvou tříd). Vezměme si data *breast_cancer*, která obsahují\n",
-    "pozitivní a negativní rakovinové nálezy. "
+    "pozitivní a negativní rakovinové nálezy. \n",
+    "Abychom měli srovnání různých řešení, vezmeme si dva klasifikátory, jednak SVC (*Support Vector Machine* klasifikátor, česky metoda podpůrných vektorů, ale český název se nepoužívá. Více informací viz TODO) a druhak tzv. *Dummy* klasifikátor, který slouží pouze jako baseline a implementuje triviální řešení. "
    ]
   },
   {
@@ -277,18 +278,22 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.dummy import DummyClassifier\n",
     "\n",
+    "# natáhneme data a rozdělíme na trénovací a testovací\n",
     "X, y = datasets.load_breast_cancer(return_X_y=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
     "\n",
+    "# vytvoříme a natrénujeme klasifikátory \n",
     "klasifikator = SVC(random_state=0, probability=True)\n",
     "klasifikator.fit(X_train, y_train)\n",
     "\n",
     "dummy = DummyClassifier()\n",
     "dummy.fit(X_train, y_train)\n",
     "\n",
+    "# oklasifikujeme si testovací vzorky \n",
     "y_pred = klasifikator.predict(X_test)\n",
     "y_dummy = dummy.predict(X_test)\n",
     "\n",
+    "# spočteme accuracy\n",
     "print(\"SVC accuracy \", accuracy_score(y_test, y_pred))\n",
     "print(\"dummy accuracy \", accuracy_score(y_test, y_dummy))"
    ]
@@ -325,6 +330,8 @@
     "Počty falešně positivních a falešně negativních případů jsou pro hodnocení úspěšnosti binární klasifikace zásadní. \n",
     "Správně klasifikované vzorky označujeme jako **true possitive** a **true negative**. \n",
     "\n",
+    "Obrázek ilustruje rozdělní vzorků na **true possitive**, **true negative**, **false negative** a **false postitive**. Zelená barva reprezentuje pozitivní vzorky, červená negativní. Vzorky uvnitř kola označil klasifikátor jak pozitivní (zelené jsou tedy **true possitive** a červené **false possitve**.  Vzorky vně kola, označil klasifikátor jako negativní, ty zelené jsou tedy **false negative** a červené **true negative**. \n",
+    "\n",
     "![obrazek_true_false_positive_negative](static/np_small.png)"
    ]
   },
@@ -352,7 +359,10 @@
     "\n",
     "FN je počet falešně negativních vzorků (**false negatives**) \n",
     "\n",
-    "Nesnaž se vzorečky zapamatovat, zamysli se nad tím, co nám říkají. S tím ti pomůže obrázek výše. "
+    "Nesnaž se vzorečky zapamatovat, zamysli se nad tím, co nám říkají. S tím ti pomůže obrázek výše a následujíc příklad z [Wikipedie](https://en.wikipedia.org/wiki/Precision_and_recall). \n",
+    "\n",
+    "Představ si, že máš počítačový program na rozpoznávání psů na fotografiích. Máš fotku 12 psů a několika koček.\n",
+    "Program ti na fotografii najde 8 psů. Pět z těchto 8 psů jsou opravdu psi (**true positive**), ale zbylí dva jsou ve skutečnosti kočky (**false positive**). **Precision** programu je 5/8 (0.625), zatímco **recall** je 5/12 (cca 0.417). **Precision** se dá interpretovat jako míra užitečnosti výsledku, **recall** říká, jak moc je výsledek kompletní (kolik psů z těch co jsme chtěli najít, jsme opravdu našli).  "
    ]
   },
   {
@@ -408,7 +418,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Další často používanou metrikou je tzv. F1 skóre. Kombinuje precision a recall. \n",
+    "Další často používanou metrikou je tzv. F1 skóre. Kombinuje precision a recall, a to tak, že obě tyto metriky mají stejnou váhu (Přizpívají stejnou měrou k výsledku). Čím větší hodnota, tím lepší výsledek. Maximální hodnota je jedna, minimální 0.\n",
+    "\n",
     "\n",
     "$$ F1 = 2 \\frac{precision \\cdot recall}{precision + recall}$$"
    ]
@@ -422,14 +433,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 skóre:     0.9518716577540107\n"
+      "F1 skóre SVC:     0.9518716577540107\n",
+      "F1 skṕre Dummy:     0.6010928961748635\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "print(\"F1 skóre:    \", f1_score(y_test, y_pred))"
+    "print(\"F1 skóre SVC:    \", f1_score(y_test, y_pred))\n",
+    "print(\"F1 skṕre Dummy:    \", f1_score(y_test, y_dummy))"
    ]
   },
   {
