opraveno dle komentu od honzy

--- a/lessons/pydata/classification_metrics/index.ipynb
+++ b/lessons/pydata/classification_metrics/index.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Úloha klasifikace je trochu jiná, než úloha regrese, proto má své vlastní metody na posuzování úspěšnosti modelů. \n",
+    "Úloha klasifikace je trochu jiná než úloha regrese, proto má své vlastní metody na posuzování úspěšnosti modelů. \n",
     "Projdeme nejdůležitější metriky určené pro klasifikaci.\n"
    ]
   },
@@ -20,7 +20,8 @@
    "metadata": {},
    "source": [
     "Abychom mohli metriky rovnou ilustrovat na příkladu, vezměme si na pomoc známou datovou množinu Iris.\n",
-    "Jedná se o klasifikaci květů kostatců, datová množina obsahuje tři třídy Setosa, Versicolor a Virginica.\n",
+    "Jedná se o klasifikaci květů (amerických) kosatců. Datovou množinu ve třicátých letech sestavil statistik a biolog Ronald Fisher (viz [wiki](https://en.wikipedia.org/wiki/Iris_flower_data_set)). \n",
+    "Množina obsahuje tři třídy: setosa, versicolor a virginica.\n",
     "\n",
     "![iris_data](static/iris_data.png)\n",
     "\n",
@@ -28,7 +29,7 @@
     "\n",
     "![iris_pairplot](static/iris_pairplot.jpg)\n",
     "\n",
-    "Cílem úlohy je vytvořit model -- klasifikátor, který nám pro dané hodnoty kalištních a okvětních lístků vrátí správné zařazení daného vzorku do třídy. \n",
+    "Cílem úlohy je vytvořit model -- klasifikátor, který nám pro dané hodnoty kališních (sepal) a okvětních (petal) lístků vrátí správné zařazení daného vzorku do třídy. \n",
     "Jako klasifikátor zvolme rozhodovací strom, t. j. *DecisionTreeClassifier*. (Je to jeden z nejznámějších klasifikátorů, oblíbený zejména díky své rychlosti a snadné interpretovatelnosti. Více si o něm můžeš přečíst TODO nějaký hezký odkaz).  \n",
     "Nás tedy bude zajímat, jak můžeme měřit úspěšnost našeho klasifikátoru. \n",
     "\n",
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nejjednodušší co můžeme měřit je procento správných odpovědí. Tomu se říká **accuracy**. "
+    "Nejjednodušší, co můžeme měřit, je procento správných odpovědí. Tomu se říká **accuracy**. "
    ]
   },
   {
@@ -189,8 +190,8 @@
    "source": [
     "## Úkol: \n",
     "\n",
-    "Představte si, že máte klasifikovat jablka a hrušky. Máte datovou množinu obsahující 100 kusů ovoce. \n",
-    "Klasifikátor má na této množině úspěšnost 90% (90 kusů je klasifikováno správně). Myslíte, že takový \n",
+    "Představ si, že máš klasifikovat jablka a hrušky. Máš datovou množinu obsahující 100 kusů ovoce. \n",
+    "Klasifikátor na této množině dosahuje úspěšnosti 90% (90 kusů je klasifikováno správně). Myslíš, že takový \n",
     "klasifikátor je dobrý? "
    ]
   },
@@ -199,8 +200,8 @@
    "metadata": {},
    "source": [
     "**Accuracy** nám dává velmi málo informace. Prozradíme si nyní, že v úkolu \n",
-    "s ovocem bylo 90 kusů jablek a 10 kusů hrušek. Klasifikátor, který vše co dostane označuje\n",
-    "za jablko má tedy na této množině 90% úspěšnost. Nám je ale k ničemu. "
+    "s ovocem bylo 90 kusů jablek a 10 kusů hrušek. Klasifikátor, který vše, co dostane, označuje\n",
+    "za jablko, má tedy na této množině 90% úspěšnost. Nám je ale k ničemu. "
    ]
   },
   {
@@ -237,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Matice záměn (**confussion matrix**) nám dává daleko více informace. Na obrázku vidím, \n",
+    "Matice záměn (**confusion matrix**) nám dává daleko více informace. Na obrázku vidím, \n",
     "kolik vzorků z třídy dané řádkem bylo klasifikováno do třídy dané sloupcem.\n",
     "\n",
     "Tedy v našem případě: Jeden vzor typu Virginica byl oklasifikován chybně jako Versicolor, dva vzory typu Versicolor byly oklasifikovány chybně jako Virginica. "
@@ -324,13 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Třídu 0 označujeme jako negativní, třídu 1 jako positivní. Jeden pozitivní vzorek byl označeno za negativní, \n",
-    "takovýmto případům říkáme falešně negativní (**false negative**). Osm negativních vzorků bylo označeno jako positivní, to jsou tzv. falešně positivní (**false possitive**) vzory. \n",
+    "Třídu 0 označujeme jako negativní, třídu 1 jako positivní. Jeden pozitivní vzorek byl označen za negativní, \n",
+    "takovýmto případům říkáme falešně negativní (**false negative**). Osm negativních vzorků bylo označeno jako positivní, to jsou tzv. falešně positivní (**false positive**) vzory. \n",
     "\n",
     "Počty falešně positivních a falešně negativních případů jsou pro hodnocení úspěšnosti binární klasifikace zásadní. \n",
-    "Správně klasifikované vzorky označujeme jako **true possitive** a **true negative**. \n",
+    "Správně klasifikované vzorky označujeme jako **true positive** a **true negative**. \n",
     "\n",
-    "Obrázek ilustruje rozdělní vzorků na **true possitive**, **true negative**, **false negative** a **false postitive**. Zelená barva reprezentuje pozitivní vzorky, červená negativní. Vzorky uvnitř kola označil klasifikátor jak pozitivní (zelené jsou tedy **true possitive** a červené **false possitve**.  Vzorky vně kola, označil klasifikátor jako negativní, ty zelené jsou tedy **false negative** a červené **true negative**. \n",
+    "Obrázek ilustruje rozdělní vzorků na **true positive**, **true negative**, **false negative** a **false positive**. Zelená barva reprezentuje pozitivní vzorky, červená negativní. Vzorky uvnitř kola označil klasifikátor jak pozitivní (zelené jsou tedy **true positive** a červené **false positve**.  Vzorky vně kola, označil klasifikátor jako negativní, ty zelené jsou tedy **false negative** a červené **true negative**. \n",
     "\n",
     "![obrazek_true_false_positive_negative](static/np_small.png)"
    ]
@@ -350,7 +351,7 @@
     "\n",
     "$$ precision = \\frac{TP}{TP+FP} $$\n",
     "\n",
-    "TP označuje počet správně označených pozitivních vzorků (**true possitives**) <br>\n",
+    "TP označuje počet správně označených pozitivních vzorků (**true positives**) <br>\n",
     "FP označuje počet falešně pozitivních vzorků (**false negatives**) \n",
     "\n",
     "Metrika **recall** říká, kolik pozitivních vzorků bylo podchyceno klasifikátorem (klasifikováno jako pozitivní).\n",
@@ -456,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Další užitečná charakteristika je tzv. ROC křivka. Křivka vyjadřuje kvalitu binárního klasifikátoru v závislosti \n",
+    "Další užitečná charakteristika je tzv. ROC křivka ([wiki](https://cs.wikipedia.org/wiki/ROC_k%C5%99ivka)). Název pochází z anglického Receiver Operating Characteristic, operační charakteristika přijímače.  Křivka vyjadřuje kvalitu binárního klasifikátoru v závislosti \n",
     "na klasifikačním prahu. \n",
     "\n",
     "Co je to klasifikační práh? Představ si, že v úloze na `breast cancer` nebude naučený model vracet hodnoty 0/1 (negativní, pozitivní nález), ale číslo typu `float` udávající pravděpodobnost (nebo nějakou míru) náležení do pozitivní třídy.\n",
@@ -515,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hodnota AUC (Area Under the Curve) udává obsah plochy pod křivkou. Čím větší plocha, tím lepší klasifikátor.  "
+    "Hodnota AUC (Area Under the Curve) udává obsah plochy pod ROC křivkou. Čím větší plocha, tím lepší klasifikátor.  "
    ]
   }
  ],
